# pipeliner

./: .gitignore  LICENSE.md  README.md  Vagrantfile
.azuredevops/: cd.yml  ci.yml
.github/workflows/: cd.yml  ci.yml
.pipeliner/: LICENSE.md  README.md  asd.sh  azdo  azdo.sh  azdo.test.sh  docker  docker.sh  docker.test  docker.test.sh  init  init.sh  init.test.sh  install  install.sh  install.test  install.test.sh  installed.test.sh  test  test.sh  test.test.sh
.pipeliner/.pipelines/: Dockerfile  cd.local.sh  cd.local.test.sh  ci.local.sh  ci.local.test.sh  docker.class.sh  docker.sh  docker.test.sh  package.class.sh  package.sh  package.test.sh  test.class.sh  test.sh  test.test.sh
.pipeliner/_test/: test.sh
.pipeliner/core/: Dockerfile  artifacts.class.sh  artifacts.sh  artifacts.test.sh  assert.class.sh  assert.sh  assert.test  assert.test.sh  azdo.sh  cli.class.sh  cli.sh  cli.test.sh  colors.test.sh  compression.class.sh  compression.sh  compression.test.sh  dictionary.test.sh  docker.class.sh  docker.sh  docker.test.sh  environment.class.sh  environment.sh  environment.test.sh  files.class.sh  files.sh  files.test.sh  log.class.sh  log.sh  log.test.sh  misc.sh  packages.sh  packages.test.sh  parallel.class.sh  parallel.sh  ssh.class.sh  ssh.sh  test.class.sh  test.sh  test.test.sh  variables.class.sh  (+7 more)
.vagrant/: Vagrantfile.azdo  Vagrantfile.default
examples/haskell/app1/: Dockerfile  app.cabal  helloworld.cabal
examples/haskell/app1/src/: HelloWorld.hs  Main.hs
examples/haskell/app1/test/: HelloWorld.hs  HelloWorldTest.hs  Main.hs
(+238 files in other folders)
