name: helloworld
version: 1.0
build-type: Simple
cabal-version: >=1.10

executable helloworld
  build-depends:
    base >= 4.7 && < 5
  default-language: Haskell2010

  main-is: Main.hs
  hs-source-dirs:
    src

test-suite helloworld-test
  build-depends:
    base >= 4.7 && < 5,
    tasty >= 1.2 && < 1.5,
    tasty-hunit >= 0.10 && < 0.12,
    helloworld
  default-language: Haskell2010
  type: exitcode-stdio-1.0

  main-is: Main.hs
  hs-source-dirs:
    test

